--- a/example/pbe-index.html
+++ b/example/pbe-index.html
@@ -61,7 +61,7 @@ Works like a charm!</textarea>
     });
   </script>
 
-  <script src='https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+  <script src='https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/hypermd-mathjax/index.js"></script>
 
   <!-- ----------------------------------------------------------------------------------- -->
